--- a/css/styles.css
+++ b/css/styles.css
@@ -6,9 +6,10 @@ html {
 .photo-container, .picOfDay-container {
     
     display: flex;
-    justify-content: space-evenly;
-    width: 100%;
+    justify-content: center;
+    width: 90%;
     margin: 0 auto;
+
 }
 h1 {
     font-size: 3rem;
@@ -22,23 +23,29 @@ h1,h3,span,.title1, .title2, .instruction, label {
     font-family: 'Teko', sans-serif;
 }
 input {
-    margin-bottom: 1em
+    margin-bottom: 1em;
+    width: 10em;
+    height: 2.5em;
+    color: #b7a4a4;
+    background: #2e2731;
+    border-radius: .5rem;
 }
 span {
     display: block;
-    margin-top: .25em;
-    font-size: 1.5rem;
+   
+    font-size: 2rem;
+    margin-bottom: 2em;
 }
 /*edit photo size */
 .today-image, .picOfDay, iframe {
-    width: 40%;
+    width: 63%;
     margin: .5em;
     max-height: 40em;
     border-radius: .5rem;
 }
 /* edit description size */
 .description-text, .description-text2 {
-    width: 90%;
+    width: 70%;
     font-size: 2rem;
     margin: 0 auto;
 }
@@ -50,24 +57,34 @@ span {
     margin: 0 auto;
     width: fit-content;
 }
+button {
+    float: right;
+    margin-left: 5px;
+    height: 2.5em;
+    background: #2e2731;
+color: #b7a4a4;
+border-radius: .5rem;
+}
 .title1, .title2{
     text-align: center;
     font-size: 5.5rem;
 }
 .title1 {
-    margin-bottom: .25em;
+    margin-bottom: 1.75em;
 }
 label {
     font-size: 2rem;
+    float: left;
+    margin-right: 5px;
 }
 body {
-   /* background-image: url('stellarbackground.jpg');*/
-   background: black;
+   background-image: url('./blacksky.jpg');
+   
     background-size: cover;
 }
 .title-box {
-    border-bottom: whitesmoke 1px solid;
-    border-top: whitesmoke 1px solid;
+    border-bottom: rgba(245, 245, 245, 0.712) 1px solid;
+    border-top: rgba(245, 245, 245, 0.712) 1px solid;
     
 }
 .cover {
@@ -81,7 +98,7 @@ body {
 .description-background {
     width: 100%;
     height: auto;
-    background-color: rgba(131, 17, 160, 0.404);
+    /*background-color: rgba(131, 17, 160, 0.404);*/
     border-radius: .5rem;
     
 }
@@ -117,9 +134,12 @@ body {
 }
 @media screen and (max-width: 428px){
     .today-image, .picOfDay{
-        width: 80%;
+        width: 100%;
     }
     h1 {
         font-size: 3rem;
+    }
+    .title1 {
+        width: 100%;
     }
 }
